--- a/packages/fetch-extension/src/pages-new/register/style.module.scss
+++ b/packages/fetch-extension/src/pages-new/register/style.module.scss
@@ -152,7 +152,6 @@ html[data-register-page="true"] #app .container {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     padding: 20px 30px;
-    text-align: center;
   }
   .addressInput {
     height: 53px;
